// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/RadioButton Checked 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-hjriPb clBAch sc-gUAEMC SOtyc"
    >
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 inzTRD"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jdNwVT StyledRadioButton-sc-g1f6ld-5 hXfoNY"
        >
          <input
            checked=""
            class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
            name="radio button"
            type="radio"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 iPqiqc StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
          >
            <svg
              class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 fAeStl"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <circle
                cx="12"
                cy="12"
                r="6"
              />
            </svg>
          </div>
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
        >
          Radio button
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/RadioButton Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-hjriPb jhtlHB sc-gUAEMC SOtyc"
    >
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 inzTRD"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jdNwVT StyledRadioButton-sc-g1f6ld-5 hXfoNY"
        >
          <input
            class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpHFwb"
            name="radio button"
            type="radio"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 hXJqqc StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
          />
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
        >
          Radio button
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/RadioButton Disabled 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-hjriPb jhtlHB sc-gUAEMC SOtyc"
    >
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 ixkEGa"
        disabled=""
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jdNwVT StyledRadioButton-sc-g1f6ld-5 hXfoNY"
        >
          <input
            class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 dTlTkb"
            disabled=""
            name="radio button"
            type="radio"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 hXJqqc StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cWrMYK"
          />
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
        >
          Radio button
        </span>
      </label>
    </div>
  </div>
</div>
`;
